<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScavengerHuntApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="splash_welcome">Get ready to play!</string>
    
     <!-- Generic --> 
    <string name="label_cancel">Cancel</string>
    <string name="label_continue">Continue</string>
    <string name="label_done">Done</string>
    
    <string name="parse_app_id">U1Z0VQYTMUfghoykmoq2hUGtwOZbNHgSQVhzMMCM</string>
    <string name="parse_client_id">zfavLPMBkK1u0edMDb3QAAabyJJAziEfmakAkYSN</string>
        
        <!-- Menu Options -->
    <string name="option_menu_about">About</string>
    <string name="option_menu_prefs">Preferences</string>
    <string name="option_menu_refresh">Refresh</string>
    <string name="option_menu_logout">Log out</string>
    
       <!-- Login Screen --> 
    <string name="label_enterUsernamePasswordEmail">Enter your username, password and email</string>
    <string name="label_username">Username</string>
    <string name="hint_username">Enter username</string>
    <string name="label_password">Password</string>
    <string name="hint_password">Enter password</string>
    <string name="label_email">Email</string>
    <string name="hint_email">Enter your EMAIL</string>
    
    <string name="label_login_in_progress">Login in progress&#8230;</string>
    <string name="label_signup_in_progress">Sign up in progress for new user</string>
    <string name="label_login_please_wait">Please wait&#8230;</string>
    <string name="label_query_in_progress">Searching for user</string>
    <string name="label_queryErrorMessage">User query error.</string>
    <string name="label_signupErrorMessage">User signup error.</string>
    <string name="label_loginErrorMessage">Login error:  </string>
    <string name="label_loginPleaseTryAgainMessage">Please try again</string>
    <string name="label_loginUsernameAlreadyExists">Already a user with that username.  Please choose a new username</string>
    <string name="label_loginEmailAlreadyExists">Already a user with that email address.  Please choose a new email</string> 
    <string name="label_selectOption">What would you like to do?</string>
    <string name="label_newgame">Create new Game</string>
    <string name="label_mygames">View My Games</string>
    <string name="label_gamesiamplaying">View Games I am Playing</string>
    <string name="label_joingame">Join a Game</string>
      
      <!-- New Game Create -->
    <string name="prompt_newgamename">Name your new game.</string>
    <string name="hint_newgamename">New game name</string>
    <string name="label_createGame">Create New Game</string>
    <string name="hint_startDate">Start Date</string>
    <string name="hint_startTime">Start Time</string>
    <string name="hint_endDate">End Date</string>
    <string name="hint_endTime">End Time</string>
    <string name="hint_newGameName">Sample Game Name</string>
    <string name="label_startDatetime">Start Date/Time:</string>
    <string name="label_endDatetime">End Date/Time:</string>
    <string name="button_create">Create</string>
      
      <!-- Game Items Manage -->
    <string name="header_itemlist">Items to find for this game:</string>
    <string name="label_additem">Add Item</string>
    <string name="hint_additem">Add item?</string>
    <string name="hint_newgamestartdate">Enter game start date</string>
    <string name="hint_newgameenddate">Enter game end date</string>
    <string name="label_gameName">Game Name:</string>
    
      <!-- Game List -->
    <string name="label_itemList">Item List</string>
    <string name="button_edit">Edit</string>
    <string name="label_currentGamePlayers">Players</string>
    <string name="button_back">Back</string>
    <string name="header_gamelist">Game List</string>
    <string name="hint_addplayer">Add Player hint</string>
    <string name="label_addplayer">Add Player label</string>
    <string name="header_playerlist">Player List</string>
    
    <string name="header_mygameslist">My Games</string>
    <string name="mygameslistButton_menu">Back to Menu</string>
    <string name="label_menu">Back to Menu</string>
 
    <!-- Edit Game -->
    <string name="label_gamePlayerList">Player List:</string>
    <string name="button_save">Save</string>
    <string name= "editgamebutton_edititems">Edit Items</string>
    <string name="editgamebutton_editplayers">Edit Players</string>
    <string name="label_editgamenametime">Save Changes</string>
    <string name="button_addItem">Add Item</string>
    <string name="button_mainmenu">Main Menu</string>
    <string name="hint_addItem">Type Item here</string>
    <string name="button_edititems">Edit Items</string>
    
    <string name="label_currentGameItems">Items</string>
    <string name="header_Currentgameslist">Current Games</string>
    <string name="title_activity_game_hub">Games</string>
    <string name="title_activity_invited_game">Invited Games</string>
    <string name="invited_games_instructions">Click to Play!</string>
    <string name="button_update">Update</string>
    <string name="hint_itemslist">Click each item when found</string>
    <string name="title_enddatetime">End Date and Time:</string>
    <string name="text_enddate">End Date and Time</string>
    <string name="title_remainingitems">Remaining Items:</string>
    <string name="hint_itemlist">Touch item to mark as found</string>
    <string name="title_gamename">Game Name</string>
    
        <!-- Found Item Dialog -->
    <string name="dialog_found">Yes, I found it!</string>
    <string name="dialog_cancel">Cancel</string>
</resources>