<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="?android:attr/buttonBarStyle"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp" >

    <TextView
        android:id="@+id/label_gameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_gameName"
        android:textSize="14.0sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/text_gameName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_gameName"
        android:layout_marginBottom="5dp"
        android:hint="@string/hint_newGameName"
        android:textSize="18.0sp" />

    <TextView
        android:id="@+id/label_endDatetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_gameName"
        android:text="@string/label_endDatetime"
        android:textSize="14.0sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/text_endDatetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/label_endDatetime"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_endDate"
        android:textSize="18.0sp" />

    <TextView
        android:id="@+id/label_itemList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_endDatetime"
        android:text="@string/label_itemList"
        android:textSize="14.0sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <ListView
        android:id="@+id/listview_gameItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_update"
        android:layout_below="@+id/label_itemList"
        android:layout_toLeftOf="@+id/view1" >
    </ListView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_alignTop="@+id/button_update"
        android:layout_alignParentLeft="true"
        android:background="@android:color/darker_gray" />

    <View
        android:id="@+id/view1"
        android:layout_width="0.5dp"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/button_back"
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/button_update"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/listview_gameItems"
        android:text="@string/button_update" />

    <Button
        android:id="@+id/button_back"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="38dp"
        android:layout_toRightOf="@+id/button_update"
        android:text="@string/button_mainmenu" />

</RelativeLayout>