<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="?android:attr/buttonBarStyle"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp" >

    <TextView
        android:id="@+id/label_gameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_gameName"
        android:textSize="14.0sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/text_gameName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_gameName"
        android:layout_marginBottom="5dp"
        android:hint="@string/hint_newGameName"
        android:textSize="18.0sp" />    

    <EditText
        android:id="@+id/enterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_addItem"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_gameName"
        android:layout_toLeftOf="@+id/button_addItem"
        android:ems="10"
        android:hint="@string/hint_additem"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <TextView
        android:id="@+id/label_listItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/enterText"
        android:text="@string/label_currentGameItems"
        android:textSize="14.0sp"
        android:textStyle="bold"
        android:visibility="visible" />
    
    <ListView
        android:id="@+id/listview_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_save"
        android:layout_below="@+id/label_listItems" >
    </ListView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_alignBottom="@+id/listview_items"
        android:layout_alignParentLeft="true"
        android:background="@android:color/darker_gray" />
    
    <Button
        android:id="@+id/button_save"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/listview_items"
        android:text="@string/button_save" />

    <Button
        android:id="@+id/button_addItem"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/enterText"
        android:layout_alignBottom="@+id/enterText"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:text="@string/label_additem"
        android:textSize="16sp"
        android:textStyle="normal" />
   
</RelativeLayout>