<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_margin="10dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/header_itemlist"
        android:textSize="18.0sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/manageItemsButton_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/manageItemsButton_cancel"
        android:layout_alignBottom="@+id/manageItemsButton_cancel"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:text="@string/label_done"
        android:textSize="16sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/manageItemsButton_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:text="@string/label_cancel"
        android:textSize="16sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/manageItemsButton_addItem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/manageItemsButton_done"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:text="@string/label_additem"
        android:textSize="16sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/enterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/manageItemsButton_addItem"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/hint_additem"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="275dp"
        android:layout_height="204dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1" >
    </ListView>
    
</RelativeLayout>
