<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameHub" >

    <TextView
        android:id="@+id/hint_text_endDatetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title_gameName"
        android:text="@string/title_enddatetime"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_alignLeft="@+id/hint_text_endDatetime"
        android:layout_below="@+id/title_gameName"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/text_endDatetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/hint_text_endDatetime"
        android:text="@string/text_enddate"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/bar2"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_endDatetime"
        android:background="@android:color/darker_gray" />

    <ListView
        android:id="@+id/listview_remainingItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_back"
        android:layout_below="@+id/hint_remainingItems" >
    </ListView>

    <TextView
        android:id="@+id/title_remainingItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bar2"
        android:paddingTop="10dp"
        android:text="@string/title_remainingitems"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/hint_remainingItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title_remainingItems"
        android:text="@string/hint_itemlist"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/button_back"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/title_gameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hint_text_endDatetime"
        android:layout_alignParentTop="true"
        android:text="@string/title_gamename"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button_back"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/hint_remainingItems"
        android:text="@string/button_mainmenu" />

</RelativeLayout>